<resources>
    <string name="app_name">SmartPlaza</string>
    <string name="home_icon">home icon</string>
    <string name="wallet_icon">wallet icon</string>
    <string name="qr_code_icon">qr code icon</string>
    <string name="message_icon">message icon</string>
    <string name="menu_icon">menu icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brands_label">Бренды</string>
    <string name="categories_label">Категории</string>
    <string name="_23">23</string>
    <string name="product_name_hint">Напишите название продукта</string>
    <string name="bakaleya_label">Бакалея</string>
    <string name="look_all_label">Смотреть все</string>
    <string name="_610">610 тг</string>
    <string name="lorem_ipsum">Хлопья Лорем ипсум</string>
</resources>